# Revsplit

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-workflow.yml  tests.yml
revsplit/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
