[tool.poetry]
name = "revsplit"
version = "0.1.0"
description = ""
authors = ["Karolina Olszewska <k.olszewskaaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.1"
click = "^8.0.3"
wemake-python-styleguide = "^0.16.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
